--- a/app/globals.css
+++ b/app/globals.css
@@ -99,10 +99,19 @@ html.dark {
   @apply relative overflow-hidden;
   width: 100%;
   height: 200px;
+  position: relative;
 }
 
 .project_img::before {
-  @apply absolute inset-0 z-5 transition duration-500 bg-black bg-opacity-20;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: black;
+  z-index: 1;
+  position: absolute;
+  opacity: 0.1;
 }
 
 .project_img img {
@@ -128,4 +137,21 @@ html.dark {
   .projects_grid {
     grid-template-columns: 1fr;
   }
+}
+
+
+.hero_animation {
+  position: absolute;
+  top: -5%;
+  right: -35%;
+  width: 100%;
+  transform: scale(0.5);
+}
+
+.hero_animation2 {
+  position: absolute;
+  top: 3%;
+  left: -35%;
+  width: 100%;
+  transform: scale(0.5);
 }
